@startuml Device Management Service
title Device Management Service - Class Diagram

enum DeviceType {
    sensor
    lamp
    lock
    thermostat
    camera
    switch
    outlet
    valve
    other
}

enum DeviceStatus {
    active
    inactive
    offline
}

class DeviceCreate {
    +RoomID: *int
    +Name: string
    +Type: DeviceType
    +Manufacturer: string
    +Model: string
    +SerialNumber: string
    +FirmwareVersion: string
    +Status: DeviceStatus
}

class DeviceUpdate {
    +RoomID: *int
    +Name?: string
    +Type?: DeviceType
    +Manufacturer: string
    +Model: string
    +SerialNumber: string
    +FirmwareVersion: string
    +Status?: DeviceStatus
}

class WebhookPayload {
    +Event: string
    +DeviceID: int
    +Device: Device
    +Timestamp: string
}

class Device {
    +ID: int
    +RoomID: *int
    +Name: string
    +Type: DeviceType
    +Manufacturer: string
    +Model: string
    +SerialNumber: string
    +FirmwareVersion: string
    +Status: DeviceStatus
    +CreatedAt: time.Time
    +UpdatedAt: time.Time
}

class DeviceRepository {
    +GetAll(): List<Device>
    +GetByID(id): Device
    +Create(data): Device
    +Update(id, data): Device
    +Delete(id): bool
}

class DeviceService {
    +GetAllDevices(): List<Device>
    +GetDeviceByID(id): Device
    +CreateDevice(data): Device
    +UpdateDevice(id, data): Device
    +DeleteDevice(id): bool
    +GetDeviceStatus(id): DeviceStatus
    -sendWebhook(event, device): void
}

class DeviceHandler {
    +GetDevices()
    +GetDeviceByID(id)
    +CreateDevice(data)
    +UpdateDevice(id, data)
    +DeleteDevice(id)
    +GetDeviceStatus(id)
}

Device "1" -- "0..*" DeviceStatus : has
DeviceRepository --> Device : maps to/from
DeviceService --> DeviceRepository : uses
DeviceHandler --> DeviceService : uses

DeviceHandler ..> DeviceCreate : binds from JSON
DeviceHandler ..> DeviceUpdate : binds from JSON

DeviceService --> WebhookPayload : creates for webhooks
DeviceService ..> Device : returns

note right of DeviceService
  Webhooks отправляются при событиях жизненного цикла устройства:
  device.created, device.updated, device.deleted.
  Webhooks POST в telemetry-service.
end note
@enduml
